Funcionalidades de Técnico

--- a/apps/taller/templates/piezas/piezas_proceso.html
+++ b/apps/taller/templates/piezas/piezas_proceso.html
@@ -16,7 +16,7 @@
 	<div class="row justify-content-md-center mb-2">
 		<h4 class="col-3 text-info">Materiales</h4>
 		<span class="col-9 text-right">
-			{% if request.user.rol == 0 %}
+			{% if request.user.rol == 0 or request.user.rol == 1 %}
 			<button class="btn btn-info col-md-3" data-toggle="modal" data-target="#agregar-pieza-modal">
 				Agregar Material&nbsp;&nbsp;&nbsp;<i class="fas fa-plus-circle"></i>
 			</button>
