--- a/apps/taller/templates/index_tecnico.html
+++ b/apps/taller/templates/index_tecnico.html
@@ -21,26 +21,26 @@
 </div>
 
 	<div class="row mt-4 justify-content-md-center">
-
-		<a href="" class="card-link" data-toggle="modal" data-target="#exampleModal2" >
+		<a href="{% url 'gestion_clientes' %}" class="card-link">
 			<div class="card-index border-success col-sm-4">
-				<div class="card-body" >
-					<h4 class="card-title">Nueva Visita</h4>
+				<div class="card-body">
+					<h4 class="card-title">Gesti&oacute;n de Clientes</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Registre una nueva visita por parte de un cliente a su taller.</p>
-						<i class="fas fa-concierge-bell fa-3x"></i>
+						<p class="card-text col-sm-10 text-justify">Vea a los clientes del taller y agregue vehículos o visitas.
+						</p>
+						<i class="fas fa-users fa-3x"></i>
 					</div>
 				</div>
 			</div>
 		</a>
-
-		<a href="" class="card-link">
+		<a href="{% url 'gestion_visitas' %}" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
-					<h4 class="card-title">Gestion de Visitas</h4>
+					<h4 class="card-title">Gesti&oacute;n de Visitas Activas</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Vea las visitas y procesos que se llevan a cabo en este momento.</p>
-						<i class="fas fa-toolbox fa-3x"></i>
+						<p class="card-text col-sm-10 text-justify">Vea los procesos que se están llevando a cabo en este momento.
+						</p>
+						<i class="fas fa-home fa-3x"></i>
 					</div>
 				</div>
 			</div>
