Eliminación de Tecnico - Campo Técnico de Visita pasa a Null

--- a/apps/taller/templates/index_admin.html
+++ b/apps/taller/templates/index_admin.html
@@ -26,7 +26,7 @@
 				<div class="card-body">
 					<h4 class="card-title">Gesti&oacute;n de Clientes</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Gestione a sus empleados administrativos y técnicos.
+						<p class="card-text col-sm-10 text-justify">Gestione a los clientes registrados en su taller, así como sus visitas y Vehículos.
 						</p>
 						<i class="fas fa-users fa-3x"></i>
 					</div>
@@ -36,10 +36,9 @@
 		<a href="{% url 'gestion_visitas' %}" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
-					<h4 class="card-title">Gesti&oacute;n de Visitas Activas</h4>
+					<h4 class="card-title">Gesti&oacute;n de Visitas activas</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Gestione los slots con los que dispone su taller.
-						</p>
+						<p class="card-text col-sm-10 text-justify">Gestione los procesos que se están llevando a cabo en su taller.</p>
 						<i class="fas fa-home fa-3x"></i>
 					</div>
 				</div>
@@ -77,8 +76,7 @@
 				<div class="card-body">
 					<h4 class="card-title">Gesti&oacute;n de Especialidades</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Gestione las diferentes especialidades de sus
-							empleados.</p>
+						<p class="card-text col-sm-10 text-justify">Gestione las diferentes especialidades de sus técnicos.</p>
 						<i class="fas fa-certificate fa-3x"></i>
 					</div>
 				</div>
@@ -89,7 +87,7 @@
 				<div class="card-body">
 					<h4 class="card-title">Gesti&oacute;n de Slots</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Gestione los slots con los que dispone su taller.
+						<p class="card-text col-sm-10 text-justify">Gestione los espacios disponibles con los que dispone su taller.
 						</p>
 						<i class="fas fa-warehouse fa-3x"></i>
 					</div>
